# solana-economic-DAO

./: .gitignore  README.md
dao/: README.md  package.json
ecoswap/: .gitignore  README.md  package-lock.json  package.json
ecoswap/_cicd/: cicd.sh
ecoswap/accounts/: ruth.json
ecoswap/client/: README.md  main.ts
ecoswap/program/: Cargo.toml  README.md
ecoswap/program/src/: lib.rs
ecov/: README.md  package.json
ecov/firstmint/: README.md  package-lock.json  package.json
ecov/firstmint/scripts/: firstmint.mjs  transfers.mjs
ecov/native/: mint.mjs
ecov/remint/: README.md  package-lock.json  package.json  remint.mjs
ecov/scripts/: mint-token.mjs  transfers.mjs
pda/: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
pda/_cicd/: cicd.sh
pda/_dist/program/: pda-keypair.json
pda/accounts/: rahab.json  tamar.json
pda/client/: main.ts
pda/program/: Cargo.toml
pda/program/src/: lib.rs
soltransfer/: .gitignore  README.md  package-lock.json  package.json
soltransfer/_dist/program/: program-keypair.json
soltransfer/client/: main.ts
soltransfer/program/: Cargo.toml
soltransfer/program/src/: lib.rs
spltransfer/: .gitignore  README.md  package.json
spltransfer/client/: main.ts
spltransfer/program/: Cargo.toml
spltransfer/program/src/: lib.rs
tokenswap/: README.md  package-lock.json  package.json
tokenswap/_dist/program/: program-keypair.json
tokenswap/accounts/: bathsheba.json
tokenswap/client/: main.ts
tokenswap/program/src/: lib.rs
