[package]
name = "program"
version = "0.1.0"
edition = "2021"

[dependencies]
borsh = "0.9.3"
borsh-derive = "0.9.1"
solana-program = "1.14.10"
spl-token = { version="3.5.0", features = [ "no-entrypoint" ] }
spl-associated-token-account = { version="1.1.2", features = [ "no-entrypoint" ] }

[dev-dependencies]
solana-program-test = "1.10.12"
solana-sdk = "1.10.12"

[lib]
crate-type = ["cdylib", "lib"]
